# tauri-plugin-sentry

./: Cargo.toml  README.md  api-iife.js  build.rs  package.json  rollup.config.js
dist-js/: index.cjs  index.d.ts  index.js
guest-js/: index.ts
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  lib.rs
