[package]
name = "tauri-plugin-sentry"
version = "2.0.0-beta"
description = "Tauri Plugin for Sentry error tracking"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
links = "tauri-plugin-sentry"

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dependencies]
serde = { workspace = true }
tauri = { workspace = true }
thiserror = { workspace = true }
schemars = { workspace = true }
base64 = "0.22"
sentry = "0.32"
sentry-rust-minidump = "0.7"
